# notes_w_rust_getprogingo

./: Cargo.toml  README.md
u01/: Cargo.toml
u01/src/: main.rs
u02/: Cargo.toml
u02/src/: lib.rs  main.rs
u03/: Cargo.toml
u03/src/: fnexplore.rs  lib.rs  main.rs  tables.rs  tempr.rs
u04/: Cargo.toml
u04/src/: chessboard.rs  conway.rs  floaten.rs  glice.rs  grids.rs  lib.rs  main.rs  mappen.rs
u05/: Cargo.toml
u05/src/: main.rs  world.rs  worldexplore.rs
u06/: Cargo.toml
u06/src/: errors.rs  lib.rs  main.rs  pointing.rs  sudoku.rs  sugrid.rs  turtle.rs
u07/: Cargo.toml
u07/src/: asynced.rs  lib.rs  main.rs  threaded.rs
