[package]
name = "u07"
version = "0.1.0"
authors = ["finiteint <finiteint@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="1.9.0", features=["attributes"]}
rand = "0.8.3"
tokio = {version="1", features=["full"]}
